# xagent

./: .gitignore  AGENTS.md  README.md  docker-compose-sandbox.yml  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.sandbox.boxlite.yml  docker-compose.sandbox.docker.yml  nginx.conf
frontend/: .env.local.example  next.config.mjs
frontend/public/: widget.js
sdks/python/: README.md  pyproject.toml
sdks/python/docs/: agents.md  api-reference.md  authentication.md  errors.md  examples.md  index.md  quickstart.md  tasks.md
sdks/python/src/xagent_sdk/: __init__.py  _http.py  agents.py  client.py  errors.py  models.py  tasks.py
sdks/python/tests/: test_client.py  test_e2e.py  test_errors.py
src/xagent/: config.py
stubs/curl_cffi/: __init__.pyi  requests.pyi
tests/core/: test_config.py  test_file_storage.py  test_workspace_durable_registration.py
tests/e2e/: README.md  app_harness.py  minio_harness.py  scripted_llm.py  test_app_harness.py  test_file_api_minio.py  test_file_persistence_minio.py  test_file_startup_sync_minio.py  test_scripted_llm.py
tests/integration/: test_auto_migration_startup.py  test_langfuse_agent_execution_e2e.py
tests/shared/: __init__.py
tests/templates/: test_manager.py
tests/utils/: langfuse_execution_fakes.py
tests/web/: test_admin_file_access.py  test_agent_checkpoint_stream.py  test_agent_manager_reconstruction.py  test_agent_tools_visibility_api.py  test_auth_api.py  test_chat_task_model_ids.py  test_dynamic_model_sharing.py  test_execution_result_projection.py  (+9 more)
(+301 files in other folders)
