[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xagent-sdk"
version = "0.1.0"
description = "Official Python SDK for the Xagent /v1/* HTTP API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Xagent Contributors" },
]
keywords = ["xagent", "agent", "sdk", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/xorbitsai/xagent"
Issues = "https://github.com/xorbitsai/xagent/issues"
Source = "https://github.com/xorbitsai/xagent/tree/main/sdks/python"

[tool.hatch.build.targets.wheel]
packages = ["src/xagent_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
